[package]
name = "benchmark"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
framework-core = { workspace = true }
idea-ui = { workspace = true }
backend-web = { workspace = true }
webview = { workspace = true }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
# Same allocator caveat applies as in the idealyst-native variant —
# the bench's churn pattern is on the inner iframe, not the runner,
# so the runner can use the default allocator without trouble.

[dependencies.web-sys]
version = "0.3"
features = ["console", "Window", "Performance"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--strip-debug", "--strip-producers", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
