[package]
name = "backend-ios"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
framework-core = { workspace = true }

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSArray", "NSEnumerator"] }
objc2-ui-kit = { version = "0.2", features = [
    "UIResponder",
    "UIView",
    "UILabel",
] }
