[package]
name = "backend-ios"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[features]
debug-stats = ["framework-core/debug-stats"]

[dependencies]
framework-core = { workspace = true }
native-layout = { workspace = true }

[target.'cfg(target_os = "ios")'.dependencies]
block2 = "0.5"
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = [
    "NSString",
    "NSArray",
    "NSEnumerator",
    "NSObject",
] }
objc2-ui-kit = { version = "0.2", features = [
    "UIResponder",
    "UIView",
    "UILabel",
    "UIButton",
    "UIControl",
    "UITextField",
    "UISwitch",
    "UISlider",
    "UIScrollView",
    "UIActivityIndicatorView",
    "UIStackView",
    "UIViewController",
    "UINavigationController",
    "UIColor",
    "UIGestureRecognizer",
    "UITapGestureRecognizer",
    "UITextInputTraits",
] }
raw-window-handle = "0.6"
