[package]
name = "backend-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
framework-core = { workspace = true }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "CssStyleSheet",
    "Document",
    "Element",
    "Event",
    "HtmlHeadElement",
    "HtmlInputElement",
    "HtmlMediaElement",
    "HtmlStyleElement",
    "Node",
    "Window",
]
