[package]
name = "backend-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Forwards to framework-core's `debug-stats`. When on, the web
# backend reports per-phase timings (`set_attribute`, `insert_rule`,
# etc.) into the framework's phase-counter aggregator so apply-style
# hot paths can be profiled from JS via `dump_debug_events`.
debug-stats = ["framework-core/debug-stats"]

[dependencies]
framework-core = { workspace = true }
wasm-bindgen = "0.2"
js-sys = "0.3"
# Used by the Graphics primitive to expose the `<canvas>` as a
# standard `WebCanvasWindowHandle` + `WebDisplayHandle` for any GPU
# library the author chooses (wgpu, glow, vello, ...). Tiny dep
# (a handful of enums + traits, no platform code).
raw-window-handle = "0.6"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "CssRule",
    "CssRuleList",
    "CssStyleDeclaration",
    "CssStyleRule",
    "CssStyleSheet",
    "Document",
    "DocumentFragment",
    "DomRect",
    "Element",
    "Event",
    "History",
    "HtmlAnchorElement",
    "HtmlElement",
    "HtmlHeadElement",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "HtmlMediaElement",
    "HtmlStyleElement",
    "KeyboardEvent",
    "Location",
    "MediaQueryList",
    "MouseEvent",
    "Node",
    "PopStateEvent",
    "ResizeObserver",
    "Window",
]
