[package]
name = "framework-macros"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[features]
# Forwarded from framework-core's debug-stats. Toggles whether
# `#[component]` emits enter/exit instrumentation calls into the
# generated component function bodies. When off, the macro emits
# no instrumentation at all.
debug-stats = []

[dependencies]
syn = { version = "2", features = ["full", "visit", "visit-mut", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
