[package]
name = "icons-lucide"
description = "Lucide icon pack for the idealyst-native framework. Only icons you reference end up in the binary."
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
framework-core = { path = "../framework-core" }

[build-dependencies]
# Lightweight XML / SVG path extraction at build time.
# No heavy deps — just string scanning.
