[package]
name = "idealyst-wire"
version.workspace = true
edition.workspace = true
license.workspace = true

# Pure data crate: defines the dev-mode hot-reload wire protocol.
# Carries no framework-core dependency so the wire format can evolve
# independently of in-memory representation.

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"

[dev-dependencies]
# Used by the round-trip integration test (tests/roundtrip.rs) that
# exercises the dev-side recorder + app-side replay engine against a
# stand-in TraceBackend.
framework-core = { workspace = true }
idealyst-dev-client = { workspace = true, features = ["native"] }
idealyst-dev-server = { workspace = true }
# Used by tests/transport.rs to open the WebSocket directly so it can
# run the read loop on this thread (the WireBackend isn't Send).
tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
